<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="#fff"
              android:orientation="vertical" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/y35"
        android:layout_marginTop="20sp"
        android:background="#fff"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true" >

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.4" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10sp"
            android:layout_weight="2.2"
            android:gravity="center_vertical"
            android:text="@string/pe_oldPwd"
            android:textColor="#000"
            android:textSize="@dimen/commonC1" />

        <EditText
            android:id="@+id/edtOldPwd"
            android:layout_width="0dp"
            android:layout_height="@dimen/y26"
            android:layout_gravity="center_vertical"
            android:layout_weight="7"
            android:background="@drawable/edt_border"
            android:hint="@string/pe_inputOldPwd"
            android:inputType="textPassword"
            android:paddingLeft="10sp"
            android:textSize="@dimen/commonC1" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.4" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/y35"
        android:layout_marginTop="10sp"
        android:background="#fff"
        android:clickable="true" >

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.4" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10sp"
            android:layout_weight="2.2"
            android:gravity="center_vertical"
            android:text="@string/pe_newPwd"
            android:textColor="#000"
            android:textSize="@dimen/commonC1" />

        <EditText
            android:id="@+id/edtNewPwd"
            android:layout_width="0dp"
            android:layout_height="@dimen/y26"
            android:layout_gravity="center_vertical"
            android:layout_weight="7"
            android:background="@drawable/edt_border"
            android:hint="@string/pe_inputNewPwd"
            android:inputType="textPassword"
            android:paddingLeft="10sp"
            android:textSize="@dimen/commonC1" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.4" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/y35"
        android:layout_marginTop="10sp"
        android:background="#fff"
        android:clickable="true" >

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.4" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10sp"
            android:layout_weight="2.2"
            android:gravity="center_vertical"
            android:text="@string/pe_confirmPwd"
            android:textColor="#000"
            android:textSize="@dimen/commonC1" />

        <EditText
            android:id="@+id/edtConfirmPwd"
            android:layout_width="0dp"
            android:layout_height="@dimen/y26"
            android:layout_gravity="center_vertical"
            android:layout_weight="7"
            android:background="@drawable/edt_border"
            android:hint="@string/pe_reInputPwd"
            android:inputType="textPassword"
            android:paddingLeft="10sp"
            android:textSize="@dimen/commonC1" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.4" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/y30"
        android:layout_marginTop="@dimen/y15"
        android:orientation="horizontal" >

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.4" />

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="9.2"
            android:background="@drawable/btn_login"
            android:onClick="onClick"
            android:text="@string/pe_submit"
            android:textColor="#fff"
            android:textSize="@dimen/commonA2" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.4" />
    </LinearLayout>

</LinearLayout>