<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#fff"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/y5"
    android:paddingTop="@dimen/y5"
    android:layout_marginBottom="@dimen/y6">

    <View
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.4" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="9.2"
        android:orientation="vertical"
        android:paddingBottom="5dp"
        android:paddingTop="5dp" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tvVersionDes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/pe_logVersion"
                android:textColor="#000"
                android:textSize="@dimen/commonA1"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvVersion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/tvVersionDes"
                android:textColor="#000"
                android:textSize="@dimen/commonA1"
                android:textStyle="bold"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="20sp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/app_name"
                android:src="@mipmap/ic_version_log" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tvVersionDateDes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pe_logDate"
                android:textColor="#272727"
                android:textSize="@dimen/commonC1" />

            <TextView
                android:id="@+id/tvVersionDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/tvVersionDateDes"
                android:textColor="#272727"
                android:textSize="@dimen/commonC1" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tvVersionExpalinDes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pe_logExplain"
                android:textColor="#272727"
                android:textSize="@dimen/commonC1" />

            <TextView
                android:id="@+id/tvVersionExpalin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvVersionExpalinDes"
                android:textColor="#272727"
                android:textSize="@dimen/commonC1" />
        </RelativeLayout>
    </LinearLayout>

    <View
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.4" />

</LinearLayout>